--- a/css/responsive.css
+++ b/css/responsive.css
@@ -32,8 +32,10 @@
     top: 72px;
   }
 
-  .col-3 {
-    column-count: 1;
+  .col-3 p {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
   }
 }
 
