--- a/css/responsive.css
+++ b/css/responsive.css
@@ -65,7 +65,7 @@
     -moz-column-count: 1;
     -webkit-column-count: 1;
     column-count: 1;
-  }
+  } 
 }
 
 @media only screen and (max-width: 650px) {
@@ -87,5 +87,11 @@
 
   #social {
     top: 60px;
+  }
+}
+
+@media only screen and (max-width: 495px){
+  #logo h2 {
+    visibility: hidden;
   }
 }
